# fast-cnum-converter

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: release.yml
.github/workflows/: release.yml  test.yaml
benchmarks/: to_alpha_int.py  to_alpha_str.py
python/benchmarks/: to_alpha_int.py  to_numeric_str.py
python/fast_cnum_converter/: __init__.py  exceptions.py
python/fast_cnum_converter/_internal/: __init__.pyi  exceptions.pyi
python/tests/: const.py  test_bad.py  test_good.py
src/: common.rs  consts.rs  helpers.rs  lib.rs  python_exceptions.rs
